crates/linear_ty/tests/compile_fail/parts_non_exhaustive.rs
use linear_ty::parts;

struct Abc {
    a: String,
}

parts! {
    #[non_exhaustive]
    impl Abc {
        a: String,
    }
}

fn main() {}
